trying to solve jiggle bug on small devices with a line-height trick

--- a/resources/main.css
+++ b/resources/main.css
@@ -172,7 +172,7 @@ legend {
     70% { transform: scale(1.02); }
     80% { transform: scale(.985); }
     90% { transform: scale(1.01); }
-    100% { transform: scale(1); }
+    100% { transform: scale(1); line-height: 1.15em; }
 }
 
 .autocomplete {
